Revision history for Test-Harness

3.42    19-03-2018
        - Enable rulesfile.t to run in core

3.41    27-02-2018
        - Released 3.40_01 without code modifications

3.40_01 23-07-2017
        - Return handle for pipes and sockets #58 (Erik Huelsmann)
        - TAP v13 plan allows trailing whitespace (Steffen Schwigon)
        - prove: add a --statefile=<path> option to customize the .prove file
          (Ævar Arnfjörð Bjarmason)
        - Avoid non-deterministic source handling, make a SourceHandler tie an
          error. (Michael Schwern, Leon Timmermans)
        - Fix and simplify MSWin32 colorization (Roy Ivy III)
        - Fix file source handler to accept single extensions option (Tomoki Aonuma)
        - Spelling fixes (Brian Wightman)

3.39    06-04-2017
        - Make tests pass when PERL_USE_UNSAFE_INC=0

3.38    13-03-2017
        - Released 3.37_01 without changes

3.37_01
        - Set PERL_USE_UNSAFE_INC when running tests using Test::Harness (Leon Timmermans)
        - Avoid loading optional modules from . in prove

3.36    30-12-2015
        - Accept YAML with trailing whitespace in header (Maik Hentsche)
        - Stop bundling Test::More for testing

3.35    2015-01-14
        - Fix prove --version to actually print the version (Leon Timmermans, #101216)
        - Add --version to usage message (Leon Timmermans, #101215)

3.34    2014-11-02
        - Enable printing CPU times spent per test (Jarkko Hietaniemi)

3.33    2014-08-16
        - Various documentation fixes (Leon Timmermans, Justin Cook)

3.32    2014-06-11
        - Remove harness_class from argument hash in T::H::E (Leon Timmermans)

3.31    2014-06-07
        - Implement external rulesfile for TAP::Harness (David Golden)
        - Add harness_class argument to TAP::Harness::Env (Leon Timmermans)
        - Make prove respect environmental variables #28 (Leon Timmermans)

3.30    2013-11-12
        - Fix missing parent prereq in META.{yml,json} and NotBuild.PL